Cleanup content and fix text being too big.

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 }
 
 .page-content p {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .page-content li {
